@@ -1,4 +1,5 @@
 3.0.14
+ * Expose tasks queue length via JMX (CASSANDRA-12758)
  * Fail repair if insufficient responses received (CASSANDRA-13397)
  * Fix SSTableLoader fail when the loaded table contains dropped columns (CASSANDRA-13276)
  * Avoid name clashes in CassandraIndexTest (CASSANDRA-13427)
